--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@tamagui/config": "^1.112.22",
     "@tamagui/next-plugin": "^1.112.22",
     "@tanstack/react-query": "^5.62.8",
-    "@web3auth/modal": "^9.0.0",
     "@web3auth/ethereum-provider": "^9.7.0",
+    "@web3auth/modal": "^9.0.0",
     "@web3auth/web3auth-wagmi-connector": "^7.0.0",
     "axios": "^1.5.0",
     "bignumber.js": "^9.1.1",
+    "framer-motion": "^12.16.0",
     "html2canvas": "^1.4.1",
     "javascript-time-ago": "^2.5.11",
     "jotai": "^1.3.7",
