--- a/package.json
+++ b/package.json
@@ -81,5 +81,9 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.4"
+  },
+  "overrides": {
+    "@vanilla-extract/sprinkles": "1.6.5",
+    "@vanilla-extract/dynamic": "2.1.5"
   }
 }
