--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@avail-project/nexus-core": "^0.0.2",
+    "@avail-project/nexus-core": "^0.0.2-beta.3",
     "@clober/v2-sdk": "^1.0.0-rc.57",
     "@google-analytics/data": "^5.1.0",
     "@headlessui/react": "^1.7.16",
