--- a/package.json
+++ b/package.json
@@ -76,13 +76,15 @@
     "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "hardhat": "^2.17.1",
+    "html-webpack-plugin": "^5.6.4",
     "jest": "^29.6.2",
     "postcss": "^8.4.26",
     "prettier": "^3.0.3",
     "storybook": "^8.6.12",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "webpack": "^5.94.0"
   },
   "overrides": {
     "@vanilla-extract/sprinkles": "1.6.5",
