--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@avail-project/nexus-core": "^1.0.0-beta.22",
     "@clober/v2-sdk": "^1.0.0-rc.57",
     "@google-analytics/data": "^5.1.0",
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.0.18",
     "@pythnetwork/pyth-evm-js": "^1.83.0",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tamagui/config": "^1.112.22",
+    "@tamagui/core": "^1.137.0",
     "@tamagui/next-plugin": "^1.112.22",
     "@tanstack/react-query": "^5.62.8",
     "@vercel/kv": "^1.0.1",
@@ -34,10 +35,10 @@
     "lightweight-charts": "^4.2.1",
     "next": "^15.0.0",
     "pg": "^8.15.6",
-    "react": "^18.3.0",
+    "react": "^19.2.0",
     "react-countdown": "^2.3.6",
     "react-countup": "^6.4.2",
-    "react-dom": "^18.3.0",
+    "react-dom": "^19.2.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-select": "^5.7.5",
     "react-tooltip": "^5.27.0",
@@ -76,7 +77,7 @@
     "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "hardhat": "^2.17.1",
-    "html-webpack-plugin": "^5.6.4",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.6.2",
     "postcss": "^8.4.26",
     "prettier": "^3.0.3",
@@ -84,7 +85,7 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.4",
-    "webpack": "^5.94.0"
+    "webpack": "^5.89.0"
   },
   "overrides": {
     "@vanilla-extract/sprinkles": "1.6.5",
