--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -15,6 +15,15 @@ extends:
   - plugin:import/errors
   - plugin:import/warnings
   - plugin:import/typescript
+settings:
+  import/resolver:
+    node:
+      extensions: ['.js', '.jsx', '.ts', '.tsx']
+      moduleDirectory:
+        - node_modules
+        - src
+    typescript:
+      project: './tsconfig.json'
 rules:
   curly: error
   no-return-await: error
