--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@heroicons/react": "^2.0.18",
     "@pythnetwork/pyth-evm-js": "^1.83.0",
     "@rainbow-me/rainbowkit": "^2.2.9",
+    "@tamagui/config": "^1.137.0",
+    "@tamagui/core": "^1.137.0",
     "@tanstack/react-query": "^5.62.8",
     "@vercel/kv": "^1.0.1",
     "@web3auth/ethereum-provider": "^9.7.0",
@@ -32,10 +34,10 @@
     "lightweight-charts": "^4.2.1",
     "next": "^15.0.0",
     "pg": "^8.15.6",
-    "react": "^19.2.0",
+    "react": "^18.3.0",
     "react-countdown": "^2.3.6",
     "react-countup": "^6.4.2",
-    "react-dom": "^19.2.0",
+    "react-dom": "^18.3.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-select": "^5.7.5",
     "react-tooltip": "^5.27.0",
