--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -17,13 +17,15 @@ extends:
   - plugin:import/typescript
 settings:
   import/resolver:
-    node:
-      extensions: ['.js', '.jsx', '.ts', '.tsx']
-      moduleDirectory:
-        - node_modules
-        - src
     typescript:
+      alwaysTryTypes: true
       project: './tsconfig.json'
+    node:
+      extensions:
+        - .js
+        - .jsx
+        - .ts
+        - .tsx
 rules:
   curly: error
   no-return-await: error
