--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "set-interval-async": "^3.0.3",
     "uuid": "^10.0.0",
     "viem": "^2.24.2",
-    "wagmi": "^2.15.4"
+    "wagmi": "^2.19.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.0",
@@ -77,7 +77,7 @@
     "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "hardhat": "^2.17.1",
-    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-plugin": "5.6.0",
     "jest": "^29.6.2",
     "postcss": "^8.4.26",
     "prettier": "^3.0.3",
@@ -85,10 +85,13 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.4",
-    "webpack": "^5.89.0"
+    "webpack": "5.93.0"
   },
   "overrides": {
     "@vanilla-extract/sprinkles": "1.6.5",
     "@vanilla-extract/dynamic": "2.1.5"
+  },
+  "engines": {
+    "node": "22.14.0"
   }
 }
