--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "set-interval-async": "^3.0.3",
     "uuid": "^10.0.0",
     "viem": "^2.24.2",
-    "wagmi": "^2.19.3"
+    "wagmi": "^2.19.3",
+    "@noble/ed25519": "^2.1.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.0",
