--- a/.github/workflows/api-health-check.yml
+++ b/.github/workflows/api-health-check.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Check base-tokens endpoint
         run: |
-          STATUS=$(curl -o /dev/null -s -w "%{http_code}" "https://alpha.clober.io/api/chains/1/base-tokens/0x0000000000000000000000000000000000000000/quote-tokens/0x0000000000000000000000000000000000000000")
+          STATUS=$(curl -o /dev/null -s -w "%{http_code}" "https://app.clober.io/api/chains/1/base-tokens/0x0000000000000000000000000000000000000000/quote-tokens/0x0000000000000000000000000000000000000000")
           if [ "$STATUS" -ne 200 ]; then
             echo "❌ base-tokens endpoint failed with status $STATUS"
             exit 1
@@ -25,7 +25,7 @@ jobs:
 
       - name: Check quote endpoint
         run: |
-          STATUS=$(curl -o /dev/null -s -w "%{http_code}" "https://alpha.clober.io/api/chains/1/quote")
+          STATUS=$(curl -o /dev/null -s -w "%{http_code}" "https://app.clober.io/api/chains/1/quote")
           if [ "$STATUS" -ne 200 ]; then
             echo "❌ quote endpoint failed with status $STATUS"
             exit 1
@@ -35,7 +35,7 @@ jobs:
 
       - name: Check price endpoint
         run: |
-          STATUS=$(curl -o /dev/null -s -w "%{http_code}" "https://alpha.clober.io/api/chains/1/price/0x0000000000000000000000000000000000000000")
+          STATUS=$(curl -o /dev/null -s -w "%{http_code}" "https://app.clober.io/api/chains/1/price/0x0000000000000000000000000000000000000000")
           if [ "$STATUS" -ne 200 ]; then
             echo "❌ price endpoint failed with status $STATUS"
             exit 1
