--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@avail-project/nexus-core": "1.0.0-beta.44",
+    "@avail-project/nexus-core": "1.0.0-rc.4",
     "@clober/v2-sdk": "1.0.0",
     "@google-analytics/data": "^5.1.0",
     "@headlessui/react": "^2.2.9",
